fix menu icon on mobile layout

--- a/website/app.css
+++ b/website/app.css
@@ -46,3 +46,20 @@ footer {
   padding: 8px 0;
   font-size: 12px;
 }
+
+.navbar-inverse .navbar-toggle {
+    border-color: #b3b3b3;
+}
+
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: #b3b3b3;
+}
+
+
+.navbar-inverse .navbar-toggle:hover {
+    border-color: #3F7AB7;
+}
+
+.navbar-inverse .navbar-toggle:hover .icon-bar {
+    background-color: #3F7AB7;
+}
